--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
+cmake_minimum_required(VERSION 3.16)
 project(left4dead)
 
-cmake_minimum_required(VERSION 3.16)
-
-# GoogleTest requires at least C++14
-set(CMAKE_CXX_STANDARD 14)
+# GoogleTest requires at least C++17
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
 
@@ -19,8 +18,8 @@ include_directories(${PROJECT_SOURCE_DIR}/Common)
 add_subdirectory("Common")
 
 # SERVER
-include_directories(${PROJECT_SOURCE_DIR}/Server/src)
-add_subdirectory("Server/src")
+# include_directories(${PROJECT_SOURCE_DIR}/Server/src)
+# add_subdirectory("Server/src")
 
 # CLIENT
 include_directories(${PROJECT_SOURCE_DIR}/Client/src)
@@ -43,16 +42,16 @@ enable_testing()
 #add_executable(server "Server/main.cpp")
 #target_link_libraries(server server_classes common_classes)
 
-#add_executable(client "Client/main.cpp")
-#target_link_libraries(client client_classes common_classes)
+add_executable(client "Client/main.cpp")
+target_link_libraries(client client_classes common_classes)
 
-add_executable(testprotocol "Testing/testprotocol.cpp" )
-target_link_libraries(testprotocol server_classes client_classes common_classes)
+# add_executable(testprotocol "Testing/testprotocol.cpp" )
+# target_link_libraries(testprotocol server_classes client_classes common_classes)
 
-target_link_libraries(
-  testprotocol
-  GTest::gtest_main
-)
+# target_link_libraries(
+#   testprotocol
+#   GTest::gtest_main
+# )
 
-include(GoogleTest)
-gtest_discover_tests(testprotocol)
+# include(GoogleTest)
+# gtest_discover_tests(testprotocol)
