add client UI with QT5

--- a/Client/src/CMakeLists.txt
+++ b/Client/src/CMakeLists.txt
@@ -4,6 +4,7 @@ FILE(GLOB_RECURSE myFiles *.cpp *.h)
 
 add_library(client_classes ${myFiles})
 
-find_package(Qt5 REQUIRED COMPONENTS Widgets)
+find_package(Qt5 COMPONENTS Core REQUIRED)
+find_package(Qt5 COMPONENTS Widgets REQUIRED)
 
-target_link_libraries(client_classes Qt5::Widgets client)
+target_link_libraries(client_classes Qt5::Widgets Qt5::Core client)
