--- a/Client/src/CMakeLists.txt
+++ b/Client/src/CMakeLists.txt
@@ -4,4 +4,11 @@ FILE(GLOB_RECURSE myFiles *.cpp *.h)
 
 add_library(client_classes ${myFiles})
 
-target_link_libraries(client_classes Qt5::Widgets Qt5::Core client)
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
+
+target_link_libraries(client_classes
+                        Qt5::Widgets
+                        Qt5::Core
+                        ${SDL2_LIBRARIES}
+                        ${SDL2_IMAGE_LIBRARIES}
+                        client)
