--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ project(left4dead)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
 
-
 # Flags
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O0 -Werror -pedantic -Wno-reorder")
 # debugging flags
@@ -21,6 +20,14 @@ set(CMAKE_AUTORCC ON)
 
 find_package(Qt5 COMPONENTS REQUIRED Core)
 find_package(Qt5 COMPONENTS REQUIRED Widgets)
+
+# SDL2
+
+find_package(SDL2 REQUIRED)
+
+set(SDL2_IMAGE_INCLUDE_DIRS /usr/include/SDL2)
+set(SDL2_IMAGE_LIBRARIES /usr/lib/libSDL2_image.so)
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS})
 
 # ASSETS
 add_custom_target(assets_target ALL
@@ -61,6 +68,7 @@ add_executable(server "Server/main.cpp")
 target_link_libraries(server server_classes common_classes)
 
 add_executable(client "Client/main.cpp")
+target_link_libraries(client ${SDL2_LIBRARIES} ${SDL2_IMAGE_LIBRARIES})
 target_link_libraries(client client_classes common_classes)
 
 # add_executable(testprotocol "Testing/testprotocol.cpp" )
