refactor: file separation in folders

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,7 +52,14 @@ add_subdirectory("Common")
 
 # SERVER
 include_directories(${PROJECT_SOURCE_DIR}/Server/src)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/Acceptor)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/CommunicationThreads)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameThread)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/Protocol)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Weapon)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Player)
+
 add_subdirectory("Server/src")
 
 # CLIENT
