--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/Protocol)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Collision)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Infected)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Player)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld/Weapon)
 
