feat: player Atack infecteds using Weapon

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,7 +95,7 @@ enable_testing()
 
 #EJECUTABLES
 add_executable(server "Server/main.cpp")
-target_link_libraries(server server_classes common_classes)
+target_link_libraries(server server_classes common_classes yaml-cpp)
 
 add_executable(client "Client/main.cpp")
 target_link_libraries(client client_classes common_classes SDL2 SDL2_image SDL2_ttf yaml-cpp)
