Added obstacle in gameSdl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ include_directories(${PROJECT_SOURCE_DIR}/Client/src)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/ClientProtocol)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/CommunicationThreads)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Characters)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Launcher)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Sdl)
