feat: Command Pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ add_subdirectory("Common")
 # SERVER
 include_directories(${PROJECT_SOURCE_DIR}/Server/src)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/Acceptor)
+include_directories(${PROJECT_SOURCE_DIR}/Server/src/Command)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/CommunicationThreads)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Server/src/GameWorld)
