Added texture Manager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,7 @@ include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Characters)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/ConfigGame)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Lobby)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Textures)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Launcher)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Sdl)
