Refactor directory client &  new render Objects

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,9 +78,12 @@ include_directories(${PROJECT_SOURCE_DIR}/Client/src)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/ClientProtocol)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/CommunicationThreads)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Camera)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Characters)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/ConfigGame)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Hud)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Lobby)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Map)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Textures)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Launcher)
