--- a/Client/src/Sdl/CMakeLists.txt
+++ b/Client/src/Sdl/CMakeLists.txt
@@ -4,5 +4,5 @@ FILE(GLOB_RECURSE myFiles *.cpp *.h)
 
 add_library(sdlLibrary ${myFiles})
 
-target_link_libraries(sdlLibrary SDL2 SDL2_image SDL2_ttf)
+target_link_libraries(sdlLibrary SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 
