--- a/Client/src/CMakeLists.txt
+++ b/Client/src/CMakeLists.txt
@@ -7,13 +7,17 @@ FILE(GLOB_RECURSE myFiles *.cpp *.h)
 
 add_library(client_classes ${myFiles})
 
-include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS})
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} 
+                    ${SDL2_TTF_INCLUDE_DIRS}
+                    ${SDL2_MIXER_INCLUDE_DIRS})
 
 target_link_libraries(client_classes
                         Qt5::Widgets
                         Qt5::Core
+                        Qt5::Multimedia
                         ${SDL2_LIBRARIES}
                         ${SDL2_IMAGE_LIBRARIES}
                         ${SDL2_TTF_LIBRARIES}
+                        ${SDL2_MIXER_LIBRARIES}
                         launcher sdlLibrary)
 target_include_directories(client_classes PUBLIC launcher sdlLibrary)
