Added grenade in gameSdl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Hud)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Lobby)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Map)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Music)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Skills)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Textures)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/GameThread)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Launcher)
