feat: Special atacks
Explosive grenade damage players and infecteds that are into the GRENADE_DAMAGE_RANGE.

Smoke grenade slows down the infecteds that are into the GRENADE_DAMAGE_RANGE.

Blitz attack damage infecteds that are into the BLITZ_ATTACK_IMPACT_RANGE.

--- a/assets/config/config.yaml
+++ b/assets/config/config.yaml
@@ -3,8 +3,8 @@
 # Operators
 ####################################################
 # 1: # idf
-idf_damage: 30
-idf_health: 150
+idf_damage: 5
+idf_health: 120
 idf_velocity: 20
 idf_rate: 20
 idf_capacity: 50
@@ -14,8 +14,8 @@ idf_rate_time: 0.05
 idf_burst_delay: 0.1
 
 # 2: # p90
-p90_damage: 20
-p90_health: 140
+p90_damage: 7
+p90_health: 120
 p90_velocity: 30
 p90_rate: 10
 p90_capacity: 30
@@ -26,7 +26,7 @@ p90_burst_delay: 0.15
 
 # 3: # scout
 scout_damage: 60
-scout_health: 200
+scout_health: 120
 scout_velocity: 12
 scout_rate: 1
 scout_capacity: 20
@@ -38,12 +38,15 @@ scout_burst_delay: 0.25
 # skills:
 stop_skill_time: 1
 #   grenade:
-grenade_damage: 50
+grenade_damage: 120
 grenade_recharge: 10
+grenade_explosion_time: 2
 
 #   smoke:
 smoke_damage: 0
 smoke_recharge: 10
+smoke_explosion_time: 3
+smoke_speed_reduction: 12
 
 #   blitz:
 blitz_damage: 100
@@ -64,29 +67,29 @@ jumper_health: 120
 jumper_velocity: 30
 
 # Witch
-witch_damage: 50
-witch_health: 900
+witch_damage: 20
+witch_health: 100
 witch_velocity: 40
 
 # Spear
-spear_damage: 30
-spear_health: 200
+spear_damage: 10
+spear_health: 100
 spear_velocity: 20
 
 # Venom
-venom_damage: 25
-venom_health: 180
+venom_damage: 5
+venom_health: 100
 venom_velocity: 20
 
 ####################################################
 # Game Difficulty
 ####################################################
 # Easy
-zombie_amount_easy: 10
-jumper_amount_easy: 3
-witch_amount_easy: 2
-spear_amount_easy: 4
-venom_amount_easy: 2
+zombie_amount_easy: 0
+jumper_amount_easy: 0
+witch_amount_easy: 0
+spear_amount_easy: 3
+venom_amount_easy: 0
 
 # Normal
 zombie_amount_normal: 20
