Added endGame render

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Camera)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Characters)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/ConfigGame)
+include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/EndGame)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Hud)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Lobby)
 include_directories(${PROJECT_SOURCE_DIR}/Client/src/Game/Map)
