feat: reanimate player
Fell down players can be reanimated by other players.

If player fell down 3, or stay more than 30 seconds down, then die.

--- a/assets/config/config.yaml
+++ b/assets/config/config.yaml
@@ -2,6 +2,7 @@
 ####################################################
 # Operators
 ####################################################
+fell_down_death_time: 30
 # 1: # idf
 idf_damage: 5
 idf_health: 120
