chore: add more obstacles (can be set by config)

--- a/assets/config/config.yaml
+++ b/assets/config/config.yaml
@@ -118,3 +118,8 @@ jumper_amount_god: 20
 witch_amount_god: 10
 spear_amount_god: 15
 venom_amount_god: 15
+
+####################################################
+# Obstacles
+####################################################
+obstacle_amount: 5
